--- a/index.html
+++ b/index.html
@@ -478,12 +478,28 @@
       flex-direction: column;
       gap: 32px;
       flex-shrink: 0;
+      position: relative;
     }
 
     .progress-step {
       display: flex;
       align-items: center;
       gap: 11px;
+      position: relative;
+    }
+
+    .progress-step::after {
+      content: '';
+      position: absolute;
+      left: 15.9px;
+      top: 31.8px;
+      width: 2px;
+      height: 32px;
+      background: #D9D9D9;
+    }
+
+    .progress-step:last-child::after {
+      display: none;
     }
 
     .step-icon {
